demo-scg/canary/demo-scg-rollout.yaml

apiVersion: argoproj.io/v1alpha1  
kind: Rollout 
metadata:
  name: demo-scg-rollout
  namespace: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-scg
  template:
    metadata:
      labels:
        app: demo-scg
    spec:
      containers:
      - name: demo-scg
        image: jei0486/demo-scg
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: demo-scg-configmap
  minReadySeconds: 30
  revisionHistoryLimit: 3

# ==== 이 위의 내용은 기존 Deployment와 동일하게 작성 ====    
  strategy:
    canary: 
          steps:               
          - setWeight: 25   # 카나리아로 전송해야하는 트래픽의 백분율
          - pause: {}       # 롤아웃을 일시 중시하도록 지시한다. 
                      # pause 구조체 내에 duration 필드가 설정되어 있으면 duration 필드의 값만큼 기다린 후 롤아웃을 진행한다.
                      # 그렇지 않으면, 일시 중지 조건이 제거될 때 까지 롤아웃이 무기한 대기한다.
          - setWeight: 50
          - pause: {} 
          - setWeight: 75
          - pause: {}
