demo-scg/canary/demo-scg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-scg-svc
  namespace: gateway
  labels:
    app: demo-scg
spec:
  selector:
    app: demo-scg
  ports:
  - protocol: TCP
    name: http
    port: 9090
    targetPort: http
